--- a/rescat/rescat/Info.plist
+++ b/rescat/rescat/Info.plist
@@ -46,10 +46,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    
-    <key>NSCameraUsageDescription</key>
-    <string></string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>사용자의 카메라 접근을 허용합니다.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사용자의 앨범 접근을 허용합니다.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>백그라운드에서도 사용자의 위치정보를 사용합니다.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>사용자의 위치정보를 사용합니다.</string>
 </dict>
 </plist>
