라이브러리 추가, 네비게이션바 색상 및 폰트 적용, 도와주세요/입양 뷰 추가

--- a/rescat/Podfile
+++ b/rescat/Podfile
@@ -10,9 +10,11 @@ target 'rescat' do
     pod 'SwiftyJSON'
     pod 'Kingfisher'
     pod 'SnapKit'
-  pod 'GoogleMaps'
-  pod 'GooglePlaces'
-pod 'AACarousel'
-pod 'MXSegmentedPager'
+    pod 'GoogleMaps'
+    pod 'GooglePlaces'
+    pod 'AACarousel'
+    pod 'MXSegmentedPager'
+    pod 'ImageSlideshow', '~> 1.6'
+    pod 'ImageSlideshow/Kingfisher'
 
 end
