--- a/rescat/Podfile
+++ b/rescat/Podfile
@@ -16,5 +16,7 @@ target 'rescat' do
     pod 'MXSegmentedPager'
     pod 'ImageSlideshow', '~> 1.6'
     pod 'ImageSlideshow/Kingfisher'
+    pod 'Firebase/Core'
+    pod 'UITextView+Placeholder'
 
 end
