--- a/rescat/rescat/Info.plist
+++ b/rescat/rescat/Info.plist
@@ -33,6 +33,11 @@
 	<string>사용자의 위치정보를 사용합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사용자의 앨범 접근을 허용합니다.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
