파이어베이스 라이브러리 추가, 마이페이지/입양신청/글등록 등 통신 완료, 뷰 완성

--- a/rescat/Podfile
+++ b/rescat/Podfile
@@ -17,6 +17,7 @@ target 'rescat' do
     pod 'ImageSlideshow', '~> 1.6'
     pod 'ImageSlideshow/Kingfisher'
     pod 'Firebase/Core'
+    pod 'Firebase/Messaging'
     pod 'UITextView+Placeholder'
 
 end
