--- a/rescat/Podfile
+++ b/rescat/Podfile
@@ -19,5 +19,6 @@ target 'rescat' do
     pod 'Firebase/Core'
     pod 'Firebase/Messaging'
     pod 'UITextView+Placeholder'
+    pod 'SwiftGifOrigin', '~> 1.6.1'
 
 end
